--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light ">
                 <div class="container-fluid align-items-center">
-                    <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="" height="80px"></a>
+                    <a class="navbar-brand" href="#"><img src="./img/logo.png" alt="" height="75px"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                         data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -48,70 +48,17 @@
             </nav>
         </div>
     </section>
-    <!-- header-end -->
 
-    <!-- Hero -->
-    <section class="hero" id="hero">
+    <!-- header-end -->
+    <section class="hero-main">
         <div class="row">
-            <section id="hero-section">
-                <div class="container">
-                    <div class="col">
-                        <div class="hero-content">
-                            <div class="row">
-                                <h1>" American-based <span>soccer Club</span>. <br> Set your goals high, and don’t stop till you get
-                                    there."</h1>
-                                <a href="introduction.html">Learn more</a>
-                            </div>
-                        </div>
-                    </div>
-            </section>
-        </div>
-        <div class="container mt-5">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="block">
-                        <div class="head">
-                            <h2><span>Learn</span></h2>
-                        </div>
-                        <div class="bg"> <img src="./img/card-img1.jpg" alt="" width="100%" height="100%"></div>
-                        <div class="iconBox">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatum ut saepe,
-                                enim obcaecati beatae nostrum natus vitae cupiditate dignissimos commodi deserunt sit,
-                                eaque explicabo odio, veritatis consequuntur omnis? Optio.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="block">
-                        <div class="head">
-                            <h2><span>Play</span></h2>
-                        </div>
-                        <div class="bg"> <img src="./img/card-img2.jpg" alt="" width="100%" height="100%"></div>
-                        <div class="iconBox">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatum ut saepe,
-                                enim obcaecati beatae nostrum natus vitae cupiditate dignissimos commodi deserunt sit,
-                                eaque explicabo odio, veritatis consequuntur omnis? Optio.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="block">
-                        <div class="head">
-                            <h2><span>Graduate</span></h2>
-                        </div>
-                        <div class="bg"> <img src="./img/card-img3.jpg" alt="" width="100%" height="100%"></div>
-                        <div class="iconBox">
-                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium voluptatum ut saepe,
-                                enim obcaecati beatae nostrum natus vitae cupiditate dignissimos commodi deserunt sit,
-                                eaque explicabo odio, veritatis consequuntur omnis? Optio.</p>
-                        </div>
-                    </div>
-                </div>
+            <div class="col-md-6"></div>
+            <div class="col-md-6">
 
             </div>
         </div>
-
     </section>
+
     <!-- Hero-end -->
 
     <!-- Show-clnics -->
@@ -293,58 +240,64 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-3">
-                    <div class="content-section">
-                        <div class="card">
-                            <img src="./img/test-1.jpg" alt="">
-                            <div class="card-content">
-                                <h4>Lorem ipsum </h4>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores molestiae.
-                                    Cupiditate repellat esse, eos rem consequatur adipisci quidem eveniet sint amet
-                                </p>
+                <div class="col-md-4">
+                    <a href="clinicPage.html">
+                        <div class="content-section">
+                            <div class="card">
+                                <img src="https://images.squarespace-cdn.com/content/v1/57d2df02bebafbc1a4a5d48f/1519188565433-UA2RP171I05NWQCUMFQY/Soccer+Allies+1+.JPG?format=1500w"
+                                    alt="">
+                                <div class="card-content">
+                                    <h4 class=" text-uppercase">
+                                        CLINICS
+                                    </h4>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores
+                                        molestiae.
+                                        Cupiditate repellat esse, eos rem consequatur adipisci quidem eveniet sint amet
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
-                <div class="col-md-3">
-                    <div class="content-section">
-                        <div class="card">
-                            <img src="./img/test-2.jpg" alt="">
-                            <div class="card-content">
-                                <h4>Lorem ipsum </h4>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores molestiae.
-                                    Cupiditate repellat esse, eos rem consequatur adipisci quidem eveniet sint amet
-                                </p>
+                <div class="col-md-4">
+                    <a href="miniAllies.html">
+                        <div class="content-section">
+                            <div class="card">
+                                <img src="https://images.squarespace-cdn.com/content/v1/57d2df02bebafbc1a4a5d48f/1594781426499-4DA66ZPX966AHALUMYPI/Mini+Allies+-+Website.jpg?format=750w"
+                                    alt="">
+                                <div class="card-content">
+                                    <h4 class=" text-uppercase">
+                                        MINI ALLIES
+                                    </h4>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores
+                                        molestiae.
+                                        Cupiditate repellat esse, eos rem consequatur adipisci quidem eveniet sint amet
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
-                <div class="col-md-3">
-                    <div class="content-section">
-                        <div class="card">
-                            <img src="./img/test-3.jpg" alt="">
-                            <div class="card-content">
-                                <h4>Lorem ipsum </h4>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores molestiae.
-                                    Cupiditate repellat esse, eos rem consequatur adipisci quidem eveniet sint amet
-                                </p>
+                <div class="col-md-4">
+                    <a href="">
+                        <div class="content-section">
+                            <div class="card">
+                                <img src="https://images.squarespace-cdn.com/content/v1/57d2df02bebafbc1a4a5d48f/1503167173581-5BIJIJME1HQAUO88N3UG/SOC_20170726_181830_0073.jpg?format=750w"
+                                    alt="">
+                                <div class="card-content">
+                                    <h4 class=" text-uppercase">
+                                        CAMPS
+                                    </h4>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores
+                                        molestiae.
+                                        Cupiditate repellat esse, eos rem consequatur adipisci quidem eveniet sint amet
+                                    </p>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
-                <div class="col-md-3">
-                    <div class="content-section">
-                        <div class="card">
-                            <img src="./img/test-1.jpg" alt="">
-                            <div class="card-content">
-                                <h4>Lorem ipsum </h4>
-                                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores molestiae.
-                                    Cupiditate repellat esse, eos rem consequatur adipisci quidem eveniet sint amet
-                                </p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+
 
             </div>
         </div>
@@ -358,6 +311,9 @@
 
             <div class="section-title">
                 <h2>Contact</h2>
+                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
+                    fugiat sit in iste officiis commodi quidem hic quas.</p>
             </div>
 
             <div class="row">
@@ -365,21 +321,21 @@
                 <div class="col-lg-5 d-flex align-items-stretch">
                     <div class="info">
                         <div class="address">
-                            <i class="fas fa-map-marker-alt"></i>
+                            <i class="bi bi-geo-alt"></i>
                             <h4>Location:</h4>
-                            <p>Oklahoma City, OK. | Dallas, TX.</p>
+                            <p>A108 Adam Street, New York, NY 535022</p>
                         </div>
 
                         <div class="email">
-                            <i class="far fa-envelope"></i>
+                            <i class="bi bi-envelope"></i>
                             <h4>Email:</h4>
-                            <p>info@soccerallies.com</p>
+                            <p>info@example.com</p>
                         </div>
 
                         <div class="phone">
-                            <i class="fas fa-phone-alt"></i>
+                            <i class="bi bi-phone"></i>
                             <h4>Call:</h4>
-                            <p>(123) 456-78-90</p>
+                            <p>+1 5589 55488 55s</p>
                         </div>
 
                         <iframe
@@ -408,11 +364,6 @@
                         <div class="form-group">
                             <label for="name">Message</label>
                             <textarea class="form-control" name="message" rows="10" required></textarea>
-                        </div>
-                        <div class="my-3">
-                            <div class="loading">Loading</div>
-                            <div class="error-message"></div>
-                            <div class="sent-message">Your message has been sent. Thank you!</div>
                         </div>
                         <div class="text-center"><button type="submit">Send Message</button></div>
                     </form>
