--- a/index.html
+++ b/index.html
@@ -50,83 +50,102 @@
     </section>
 
     <!-- header-end -->
-    <section class="hero-main">
-        <div class="row">
-            <div class="col-md-6"></div>
-            <div class="col-md-6">
 
+    <!-- hero-main -->
+    <section class="hero-main">
+        <div class="row p-0 m-0 align-items-center">
+            <div class="col-md-7">
+                <div class="hero-left">
+                    <h4>
+                        Upcomming Clinics
+                    </h4>
+                    <div class="clinics-list">
+                        <ul>
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="left-list d-flex align-items-center">
+                                    <span class="date">Nov <br><strong>12</strong></span>
+                                    <span class="ms-5">
+                                        <strong>Shooting Clinic A</strong>
+                                        <br>
+                                        Starts from 10:00 Am
+                                    </span>
+                                </div>
+                                <div class="right-list">
+                                    <button>Register Now</button>
+                                </div>
+                            </li>
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="left-list d-flex align-items-center">
+                                    <span class="date">Nov <br><strong>12</strong></span>
+                                    <span class="ms-5">
+                                        <strong>Passing Clinic A</strong>
+                                        <br>
+                                        Starts from 10:00 Am
+                                    </span>
+                                </div>
+                                <div class="right-list">
+                                    <button>Register Now</button>
+                                </div>
+                            </li>
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="left-list d-flex align-items-center">
+                                    <span class="date">Nov <br><strong>13</strong></span>
+                                    <span class="ms-5">
+                                        <strong>Shooting Clinic A</strong>
+                                        <br>
+                                        Starts from 10:00 Am
+                                    </span>
+                                </div>
+                                <div class="right-list">
+                                    <button>Register Now</button>
+                                </div>
+                            </li>
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="left-list d-flex align-items-center">
+                                    <span class="date">Nov <br><strong>14</strong></span>
+                                    <span class="ms-5">
+                                        <strong>Shooting Clinic B</strong>
+                                        <br>
+                                        Starts from 10:00 Am
+                                    </span>
+                                </div>
+                                <div class="right-list">
+                                    <button>Register Now</button>
+                                </div>
+                            </li>
+                            <li class="d-flex align-items-center justify-content-between">
+                                <div class="left-list d-flex align-items-center">
+                                    <span class="date">Nov <br><strong>15</strong></span>
+                                    <span class="ms-5">
+                                        <strong>Shooting Clinic A</strong>
+                                        <br>
+                                        Starts from 10:00 Am
+                                    </span>
+                                </div>
+                                <div class="right-list">
+                                    <button>Register Now</button>
+                                </div>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-5">
+                <div class="hero-right">
+                    <img src="./img/image 3 or 4 (2).png" alt="">
+                    <ul class="progressbar mt-3">
+                        <li class="active">Learn</li>
+                        <li>Play</li>
+                        <li>Graduate</li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
 
     <!-- Hero-end -->
 
-    <!-- Show-clnics -->
-    <section class="Clinics-wrapper" id="Clinics-wrapper">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="left-content">
-                        <a href="">Upcoming clinics- <span>Sign up now</span></a>
-                        <p>For ages 4-13 at all levels. Soccer allies specializes in creating lightbulb moments and
-                            growing
-                            love for the game in grass roots players.</p>
-                    </div>
-                </div>
-                <div class="col-md-6">
-                    <div class="main-slider">
-                        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                            <div class="carousel-indicators">
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                                    class="active" aria-current="true" aria-label="Slide 1"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                                    aria-label="Slide 2"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                                    aria-label="Slide 3"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3"
-                                    aria-label="Slide 4"></button>
-                                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="4"
-                                    aria-label="Slide 5"></button>
-                            </div>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img src="https://images.unsplash.com/photo-1519494140681-8b17d830a3e9?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=753&q=80"
-                                        class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="https://images.unsplash.com/photo-1598256989800-fe5f95da9787?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
-                                        class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="https://images.unsplash.com/photo-1621953789264-0734777ee76e?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"
-                                        class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="https://thumbs.dreamstime.com/b/medical-center-clinic-sign-building-41234221.jpg"
-                                        class="d-block w-100" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="https://images.unsplash.com/photo-1606318313647-137d1f3b4d3c?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=756&q=80"
-                                        class="d-block w-100" alt="...">
-                                </div>
-                            </div>
-                            <button class="carousel-control-prev" type="button"
-                                data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Previous</span>
-                            </button>
-                            <button class="carousel-control-next" type="button"
-                                data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="visually-hidden">Next</span>
-                            </button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-    <!-- Show-clnics-end -->
 
     <!-- Testimonals -->
 
@@ -240,12 +259,11 @@
         </div>
         <div class="container">
             <div class="row">
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <a href="clinicPage.html">
                         <div class="content-section">
                             <div class="card">
-                                <img src="https://images.squarespace-cdn.com/content/v1/57d2df02bebafbc1a4a5d48f/1519188565433-UA2RP171I05NWQCUMFQY/Soccer+Allies+1+.JPG?format=1500w"
-                                    alt="">
+                                <img src="./img/image 3 or 4 (2).png" alt="">
                                 <div class="card-content">
                                     <h4 class=" text-uppercase">
                                         CLINICS
@@ -259,12 +277,29 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
+                    <a href="champPage.html">
+                        <div class="content-section">
+                            <div class="card">
+                                <img src="./img/image 5.png" alt="">
+                                <div class="card-content">
+                                    <h4 class=" text-uppercase">
+                                        CAMPS
+                                    </h4>
+                                    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores
+                                        molestiae.
+                                        Cupiditate repellat esse, eos rem consequatur adipisci quidem eveniet sint amet
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-md-3">
                     <a href="miniAllies.html">
                         <div class="content-section">
                             <div class="card">
-                                <img src="https://images.squarespace-cdn.com/content/v1/57d2df02bebafbc1a4a5d48f/1594781426499-4DA66ZPX966AHALUMYPI/Mini+Allies+-+Website.jpg?format=750w"
-                                    alt="">
+                                <img src="./img/Mini Allies image 6 .png" alt="">
                                 <div class="card-content">
                                     <h4 class=" text-uppercase">
                                         MINI ALLIES
@@ -278,15 +313,15 @@
                         </div>
                     </a>
                 </div>
-                <div class="col-md-4">
+
+                <div class="col-md-3">
                     <a href="">
                         <div class="content-section">
                             <div class="card">
-                                <img src="https://images.squarespace-cdn.com/content/v1/57d2df02bebafbc1a4a5d48f/1503167173581-5BIJIJME1HQAUO88N3UG/SOC_20170726_181830_0073.jpg?format=750w"
-                                    alt="">
+                                <img src="./img/Team pic image 7 (1).png" alt="" class="ms-4" width="100%">
                                 <div class="card-content">
                                     <h4 class=" text-uppercase">
-                                        CAMPS
+                                        Teams
                                     </h4>
                                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, asperiores
                                         molestiae.
