--- a/miniAllies.html
+++ b/miniAllies.html
@@ -239,16 +239,16 @@
                         <li><a href=""><i class="fas fa-check-double me-2"></i>Lawton Soccer Academy Head Coach U17 -
                                 U19 2007-2012</a></li>
                         <hr>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach - Edmond Legends - 2016-2017
+                        <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach - Edmond Legends - 2016-2017 </a>
                         </li>
                         <hr>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach Crossings Middle School - 2017
+                        <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach Crossings Middle School - 2017</a>
                         </li>
                         <hr>
                         <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach Crossings Girl's Varsity 2018
-                                - Current</li>
+                                - Current</a></li>
                         <hr>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Soccer Allies - Coach - 2018 - Current
+                        <li><a href=""><i class="fas fa-check-double me-2"></i>Soccer Allies - Coach - 2018 - Current</a>
                         </li>
 
                     </ul>
@@ -257,6 +257,127 @@
         </div>
     </section>
     <!-- miniAllies page-end -->
+
+      <!-- ======= Contact Section ======= -->
+      <section id="contact" class="contact">
+        <div class="container" data-aos="fade-up">
+
+            <div class="section-title">
+                <h2>Contact</h2>
+                <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint
+                    consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
+                    fugiat sit in iste officiis commodi quidem hic quas.</p>
+            </div>
+
+            <div class="row">
+
+                <div class="col-lg-5 d-flex align-items-stretch">
+                    <div class="info">
+                        <div class="address">
+                            <i class="bi bi-geo-alt"></i>
+                            <h4>Location:</h4>
+                            <p>A108 Adam Street, New York, NY 535022</p>
+                        </div>
+
+                        <div class="email">
+                            <i class="bi bi-envelope"></i>
+                            <h4>Email:</h4>
+                            <p>info@example.com</p>
+                        </div>
+
+                        <div class="phone">
+                            <i class="bi bi-phone"></i>
+                            <h4>Call:</h4>
+                            <p>+1 5589 55488 55s</p>
+                        </div>
+
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621"
+                            frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+                    </div>
+
+                </div>
+
+                <div class="col-lg-7 mt-5 mt-lg-0 d-flex align-items-stretch">
+                    <form action="forms/contact.php" method="post" role="form" class="php-email-form">
+                        <div class="row">
+                            <div class="form-group col-md-6">
+                                <label for="name">Your Name</label>
+                                <input type="text" name="name" class="form-control" id="name" required>
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label for="name">Your Email</label>
+                                <input type="email" class="form-control" name="email" id="email" required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label for="name">Subject</label>
+                            <input type="text" class="form-control" name="subject" id="subject" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="name">Message</label>
+                            <textarea class="form-control" name="message" rows="10" required></textarea>
+                        </div>
+                        <div class="text-center"><button type="submit">Send Message</button></div>
+                    </form>
+                </div>
+
+            </div>
+
+        </div>
+    </section><!-- End Contact Section -->
+
+
+    <!-- Footer -->
+    <footer>
+        <div class="container-fluid">
+            <div class="row align-items-center">
+                <div class="col-md-3 col-sm-3 ">
+                    <div class="social-wrap">
+                        <img src="./img/logo.png" alt="" height="100px
+                        ">
+
+                        <div class="social-links">
+                            <a href=""><i class="fab fa-facebook-f"></i></a>
+                            <a href=""><i class="fab fa-instagram"></i></a>
+                            <a href=""><i class="fab fa-twitter"></i></a>
+                            <a href=""><i class="fab fa-github"></i></a>
+                            <a href=""><i class="fab fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3 footer-m">
+                    <p>Year after year, families tell us why they choose Hello Summer as a priority place for their kids
+                        to spend summer holidays at and to have the best time Ever</p>
+                </div>
+                <div class="col-md-3 col-sm-3 footer-m">
+                    <div class="quick-links">
+                        <h4>Quicks Link</h4>
+                        <ul>
+                            <li><a href="">Resources</a></li>
+                            <li><a href="">Privacy</a></li>
+                            <li><a href="">Knowledge Center</a></li>
+                            <li><a href="">LMS</a></li>
+
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-md-3 col-sm-3 footer-m">
+                    <div class="quick-links">
+                        <h4>Quicks Link</h4>
+                        <ul>
+                            <li><a href="">Office hours: 9:00am – 5:00pm</a></li>
+                            <li><a href="">Telephone: (123) 456-78-90</a></li>
+                            <li><a href="">Email:info@soccerallies.com</a></li>
+                            <li><a href="">Address: 18509 w meridian Edmond</a></li>
+
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Footer-end -->
 
 
 
