lets goo for now

--- a/miniAllies.html
+++ b/miniAllies.html
@@ -131,10 +131,12 @@
         </div>
         <div class="container-fluid">
             <div class="row">
-                <div class="banner-inner ">
-                    <p>Sign up the youngsters to join Ali on a journey through the exciting Mini Allies Program. Players
-                        will come against different characters along the way and learn how to defeat each one using
-                        certain touches, skills, or moves. A fun way to get players EXCITED ABOUT SOCCER!</p>
+                <div class="col-12">
+                    <div class="banner-inner ">
+                        <p>Sign up the youngsters to join Ali on a journey through the exciting Mini Allies Program. Players
+                            will come against different characters along the way and learn how to defeat each one using
+                            certain touches, skills, or moves. A fun way to get players EXCITED ABOUT SOCCER!</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -239,16 +241,19 @@
                         <li><a href=""><i class="fas fa-check-double me-2"></i>Lawton Soccer Academy Head Coach U17 -
                                 U19 2007-2012</a></li>
                         <hr>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach - Edmond Legends - 2016-2017 </a>
+                        <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach - Edmond Legends - 2016-2017
+                            </a>
                         </li>
                         <hr>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach Crossings Middle School - 2017</a>
+                        <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach Crossings Middle School -
+                                2017</a>
                         </li>
                         <hr>
                         <li><a href=""><i class="fas fa-check-double me-2"></i>Head Coach Crossings Girl's Varsity 2018
                                 - Current</a></li>
                         <hr>
-                        <li><a href=""><i class="fas fa-check-double me-2"></i>Soccer Allies - Coach - 2018 - Current</a>
+                        <li><a href=""><i class="fas fa-check-double me-2"></i>Soccer Allies - Coach - 2018 -
+                                Current</a>
                         </li>
 
                     </ul>
@@ -258,8 +263,8 @@
     </section>
     <!-- miniAllies page-end -->
 
-      <!-- ======= Contact Section ======= -->
-      <section id="contact" class="contact">
+    <!-- ======= Contact Section ======= -->
+    <section id="contact" class="contact">
         <div class="container" data-aos="fade-up">
 
             <div class="section-title">
